# vsss

./: README.md
vss_simulation/: CMakeLists.txt  README.md  package.xml
vss_simulation/config/: robot_controller.yaml  robot_team1_center_.yaml  robot_team1_north_.yaml  robot_team1_south_.yaml  robot_team2_center_.yaml  robot_team2_north_.yaml  robot_team2_south_.yaml
vss_simulation/launch/: arena_vss.py  camera.launch.py  robot.launch.py  rviz.launch.py
vss_simulation/models/campo_vss/: model.config  model.sdf
vss_simulation/rviz/: display_vss.rviz
vss_simulation/urdf/: camera.urdf.xacro  common_properties.urdf.xacro  ros2_control.xacro  vss.urdf.xacro  vss.xacro  wheel.urdf.xacro
vss_simulation/worlds/campo_vss/: campo_vss.world
